--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.output.ansi.enabled=ALWAYS
 
 # Configurações de Banco de dados
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/sistemaLab?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/sistemaLaboratorio?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
